# system_monitor

./: CLAUDE.md  Cargo.toml
src/: collector.rs  cpu_analyzer.rs  feishu_notifier.rs  feishu_renderer.rs  lib.rs  main.rs  memory_analyzer.rs  models.rs  renderer.rs  script_detector.rs  zombie_detector.rs
tests/: analyzer_tests.rs  feishu_tests.rs
