[package]
name = "system_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
nix = { version = "0.30", features = ["process", "signal"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
